edited styling in border country component and trucated country name to prevent overflow

--- a/src/Pages/CountryDetail/style.css
+++ b/src/Pages/CountryDetail/style.css
@@ -60,6 +60,7 @@
 }
 .bcont p{
   font-weight: 600;
+  text-align: center;
 }
 .lang{
   width: 100%;
